objects/FieloEE__RewardItem__c.object
<CustomObject>
    <description>Stock of each reward.</description>
    <fields>
        <fullName>FieloEE__Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieloEE__IsCondenser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCondenser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Item</label>
        <referenceTo>FieloEE__RedemptionItem__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <label>Reward</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Reward__c.FieloEE__Intangible__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <description>&quot;Available&quot; means the reward can be redeemed.
&quot;Unavailable&quot; means the voucher is already used.
&quot;Canceled&quot; is when the voucher is expired.
&quot;Pending&quot; is when the redemption is closed and the voucher was not used.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reward Item</label>
    <nameField>
        <displayFormat>IT {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>